<resources>
    <string name="app_name">ShodanAppPrototype</string>
    <string name="title_activity_login">Kirjautuminen</string>
    <string name="Found_results"> \u0020 Tulokset! Huomaa, että näet vain 100 tulosta ilmaisella tilillä</string>
    <string name="DefaultField">Default</string>
    <string name="HostName">Palvelimen nimi: \u0020 </string>
    <string name="Server">Palvelin: \u0020</string>
    <string name="IP">IP: \u0020</string>
    <string name="Country">Maa: \u0020</string>

    <string name="Settings">Asetukset</string>
    <string name="About">Informaatiota </string>
    <string name="Language">Kieli</string>
    <string name="Favourites">Suosikit</string>
    <string name="LogOut">Kirjaudu ulos/sisään</string>

    <string name="Search">Haku</string>
    <string name="fi">fi</string>
    <string name="en">en</string>
    <string name="sv">sv</string>
    <string name="GettingStarted">Näytä aloitusohjeet</string>
    <string name="favourites_intro">Täältä näet suosikkisi, voit lisätä suosikkeja, kun avaat ip-linkin hakemisen jälkeen</string>
    <string name="main">Päävalikko</string>
    <string name="hyperlink">http://google.com</string>
    <string name="hyperlink2">https://en.wikipedia.org/wiki/Shodan_(website)</string>
    <string name="About_Intro">Tämä ohjelma on epävirallinen versio Shodan.io-sivustosta eikä ole tarkoitettu kaupalliseen käyttöön </string>
    <string name="About_Links_Info">Sivustoja, joista löytyy lisätietoa Shodanista:</string>
    <string name="Have_to_Login_first">Sinun täytyy ensiksi kirjautua!</string>
    <string name="Take_me_to_site">Vie minut sivustolle</string>
    <string name="Warning_sign">HUOMIOI, ETTÄ TÄMÄ SAATTAA OLLA LAITONTA</string>
    <string name="Information_of_Device">Laitteen tiedot: </string>

    <string name="Show_More_Information_btn">Show More Information</string>

    <string name="About_More_Information_sites">You can find more information from links below:</string>
    <string name="Info">Info:</string>
    <string name="Timestamp">Timestamp:</string>
    <string name="Os">Os:</string>
    <string name="Link">Link:</string>
    <string name="Port">Port:</string>
    <string name="Version">Version:</string>
    <string name="Product">Product:</string>
    <string name="Uptime">Uptime:</string>
    <string name="Html">Html:</string>

    <string name="Get_Apikey_With_Camera">Get APIKEY WITH CAMERA</string>
    <string name="Info_Use_Camera">Or use QR-code-scanner to do the job from your computers screen</string>
    <string name="EditText_ApikeyHere">Apikey here</string>
    <string name="LogIn">Login</string>
    <string name="HyperLink_ShodanProfile">https://account.shodan.io/</string>
    <string name="Hyperlink_ShodanMainPage">https://www.shodan.io/</string>
    <string name="Info_Go_To_Hyperlink">You can find your APIKEY from your shodan profile:</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
